# cardiac_benchmark_toolkitx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cardiac_benchmark_toolkitx/: __init__.py  data.py  fiber_generation.py  mesh_generation.py
docker/: Dockerfile
meshes/: ellipsoid_0.005.h5  ellipsoid_0.005.xdmf
src/: fiber_generation.py
