[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "cardiac_benchmark_toolkitx"
version = "0.1.0"
description = "Cardiac benchmark toolkit for dolfinx"
authors = [
    {name = "Reidmen Arostica", email = "r.rethmawn@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "meshio",
    "importlib-metadata"
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]

all = [
   "cardiac_benchmark_toolkitx[dev]"
]

[tool.setuptools]
packages = ["cardiac_benchmark_toolkitx"]
